Formulario de acrescimo de categoria

--- a/afferolab/src/app/app.component.html
+++ b/afferolab/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-formulario-produto></app-formulario-produto>
 
-<app-lista-produtos></app-lista-produtos>
+    <app-formulario-produto></app-formulario-produto>
+   
+    <app-lista-produtos></app-lista-produtos>
+    
+    <app-formulario-categoria></app-formulario-categoria>
