--- a/afferolab/src/app/formulario-categoria/formulario-categoria.component.html
+++ b/afferolab/src/app/formulario-categoria/formulario-categoria.component.html
@@ -1,4 +1,5 @@
 <div class="example-container">
+        <h2 class="mat-title">Cadastrar Categoria</h2>
    <form [formGroup]="formularioCategoria" (ngSubmit)="submitCategoria()">
     <mat-form-field>
         <input matInput type="text" formControlName="nome" placeholder="Nome">
