--- a/afferolab/src/app/formulario-produto/formulario-produto.component.html
+++ b/afferolab/src/app/formulario-produto/formulario-produto.component.html
@@ -1,5 +1,6 @@
 
   <div class="example-container">
+    <h2 class="mat-title">Cadastrar Produto</h2>
     <form [formGroup]="formulario" (ngSubmit)="onSubmit()">
       <mat-form-field>
           <input matInput type="text" formControlName="nome" placeholder="Nome">
